--- a/views/index.html
+++ b/views/index.html
@@ -2,6 +2,7 @@
 <html>
     <!-- Header -->
     <head>
+        <meta http-equiv="refresh" content="0; url=https://ChancellorO.github.io/views/index.html">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Lobster&family=Roboto&display=swap" rel="stylesheet">
