--- a/views/index.html
+++ b/views/index.html
@@ -29,7 +29,7 @@
                 <u1>
                    <li><img src="../imgs/FrontPage1.jpg" alt="FrontPage1"></li>
                    <li><img src="../imgs/FrontPage2.jpg" alt="FrontPage2"></li>
-                   <li><img src="../imgs/FrontPage3.jpg"alt="FrontPage3"></li>
+                   <!-- <li><img src="../imgs/FrontPage3.jpg"alt="FrontPage3"></li> -->
                    <li><h1>Welcome to My Website</h1></li>
                 </u1>
             </section>
